--- a/app/src/main/res/layout/fragment_edit_user.xml
+++ b/app/src/main/res/layout/fragment_edit_user.xml
@@ -50,7 +50,6 @@
                 android:paddingRight="10dp"
                 android:paddingStart="10dp"
                 android:textColor="#000000"
-                android:text="@{user.name}"
                 android:textSize="16sp" />
 
             <ImageView
@@ -72,7 +71,6 @@
                 android:layout_toEndOf="@+id/profile_add_user_icon2"
                 android:gravity="center_vertical"
                 android:textColor="#111111"
-                android:text="@{user.address}"
                 android:textSize="16sp" />
 
             <ImageView
@@ -98,7 +96,31 @@
                 android:paddingRight="10dp"
                 android:paddingStart="10dp"
                 android:textColor="#000000"
-                android:text="@{user.website}"
+                android:textSize="16sp" />
+
+            <ImageView
+                android:id="@+id/profile_add_user_icon4"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_below="@+id/profile_add_user_icon3"
+                android:layout_marginStart="15dp"
+                android:contentDescription="@string/app_name"
+                android:src="@drawable/ic_phone_black_24dp" />
+
+            <EditText
+                android:id="@+id/profile_add_phone"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_below="@+id/profile_add_user_icon2"
+                android:layout_gravity="start"
+                android:layout_toEndOf="@+id/profile_add_user_icon3"
+                android:gravity="center_vertical"
+                android:hint="@string/official_website"
+                android:inputType="phone"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:paddingStart="10dp"
+                android:textColor="#000000"
                 android:textSize="16sp" />
 
             <Button
