Исправлен фрагмент введения

--- a/app/src/main/res/xml/settings_prefs.xml
+++ b/app/src/main/res/xml/settings_prefs.xml
@@ -44,13 +44,7 @@
     </PreferenceCategory>
 
     <PreferenceCategory
-        android:title="@string/browser">
-
-        <CheckBoxPreference
-            android:key="chrome_custom_tabs"
-            android:defaultValue="true"
-            android:title="@string/custom_tabs"
-            android:summary="@string/custom_tabs_desc" />
+        android:title="@string/other">
 
 
     </PreferenceCategory>
@@ -58,11 +52,6 @@
     <PreferenceCategory
         android:title="@string/user_interface">
 
-        <CheckBoxPreference
-            android:key="navigation_bar_tint"
-            android:defaultValue="true"
-            android:title="@string/navigation_bar_tint"
-            android:summary="@string/navigation_bar_tint_desc"/>
 
     </PreferenceCategory>
 
