--- a/app/src/main/res/layout/fragment_tricks.xml
+++ b/app/src/main/res/layout/fragment_tricks.xml
@@ -45,6 +45,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/baseline_person_black_24dp"
+                        android:foregroundTint="@color/colorPrimaryDark"
                         android:importantForAccessibility="no"
                         android:hapticFeedbackEnabled="true"/>
 
@@ -54,7 +55,7 @@
                         android:layout_marginTop="16dp"
                         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                         android:text="@string/to_add_trick"
-                        android:textColor="@color/colorPrimaryText"
+                        android:textColor="@color/colorPrimaryDark"
                         android:textAlignment="center"/>
 
                 </LinearLayout>
