--- a/app/src/main/res/layout/fragment_users_list.xml
+++ b/app/src/main/res/layout/fragment_users_list.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<ru.shtrm.askmaster.component.FastScrollRecyclerView
+<android.support.v7.widget.RecyclerView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/recyclerViewUsersList"
-    app:fastScrollPopupTextColor="@android:color/primary_text_dark"
-    app:fastScrollAutoHide="true"
-    app:fastScrollAutoHideDelay="1500" />
+    android:scrollbars="vertical"
+    android:scrollbarFadeDuration="1"
+    android:fadeScrollbars="true"
+    android:clipToPadding="false"/>
