--- a/app/src/main/res/layout/item_image_text.xml
+++ b/app/src/main/res/layout/item_image_text.xml
@@ -22,6 +22,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
+        android:maxLines="3"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
