--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -3,8 +3,7 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingStart="@dimen/activity_vertical_margin"
-    android:paddingEnd="5dp">
+    android:padding="5dp">
 
     <FrameLayout
         android:layout_width="wrap_content"
