--- a/app/src/main/res/layout/trick_details.xml
+++ b/app/src/main/res/layout/trick_details.xml
@@ -72,14 +72,14 @@
     </android.support.v4.widget.NestedScrollView>
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/fab_delete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
-        android:contentDescription="@string/activity_add_question"
+        android:contentDescription="@string/delete_trick"
         android:tint="@android:color/white"
-        app:backgroundTint="@color/colorPrimary"
+        app:backgroundTint="@color/red"
         android:layout_gravity="bottom|end"
-        android:src="@drawable/ic_done_white_24dp" />
+        android:src="@drawable/ic_delete_white_24dp" />
 
 </android.support.design.widget.CoordinatorLayout>
