--- a/app/src/main/res/layout/fragment_question_details.xml
+++ b/app/src/main/res/layout/fragment_question_details.xml
@@ -27,8 +27,8 @@
                 <android.support.v7.widget.Toolbar
                     android:id="@+id/toolbar"
                     android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
-                    android:background="?attr/colorPrimary"
+                    android:layout_height="?android:attr/actionBarSize"
+                    android:background="@color/colorPrimary"
                     app:popupTheme="@style/AppTheme.PopupOverlay" />
 
             </android.support.design.widget.AppBarLayout>
@@ -55,6 +55,8 @@
             app:backgroundTint="@color/colorPrimary"
             app:layout_anchor="@id/user_detail"
             app:layout_anchorGravity="bottom|end" />
+
+    <include layout="@layout/question_action" />
 
     </android.support.design.widget.CoordinatorLayout>
 </android.support.v4.widget.DrawerLayout>
