--- a/app/src/main/res/layout/item_answer.xml
+++ b/app/src/main/res/layout/item_answer.xml
@@ -45,6 +45,13 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:id="@+id/answerTitle"
+            android:textColor="@color/colorPrimaryText"
+            android:textAppearance="@style/TextAppearance.AppCompat.Title" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:singleLine="false"
             android:ellipsize="end"
             android:textAppearance="@style/TextAppearance.AppCompat.Title"
@@ -58,6 +65,11 @@
             android:stretchMode="columnWidth"
             android:numColumns="3"
             android:id="@+id/answerPhotoGrid"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/answerDate"/>
 
         <TextView
             android:layout_width="match_parent"
