--- a/app/src/main/res/layout/item_answer.xml
+++ b/app/src/main/res/layout/item_answer.xml
@@ -1,60 +1,49 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
+    android:layout_marginLeft="5dp"
+    android:layout_marginRight="5dp"
+    android:paddingStart="5dp"
+    android:paddingEnd="5dp"
+    android:paddingTop="10dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <!-- the circular icon on the left -->
-    <ImageView
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:src="@drawable/user_random_icon_2"
-        android:tint="@android:color/white"
-        android:layout_marginEnd="24dp"
-        android:padding="4dp"
-        android:contentDescription="@string/app_name"
-        android:id="@+id/answerAuthorImage"/>
-
-    <!-- the blue line -->
     <FrameLayout
-        android:layout_width="15dp"
-        android:layout_height="match_parent"
-        android:padding="2dp"
-        android:id="@+id/item_line">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
-        <!-- the semi transparent circle on the line -->
-        <View
-            android:layout_width="11dp"
-            android:layout_height="11dp"
-            android:background="@drawable/baseline_person_black_24dp"/>
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:layout_gravity="center"
+            android:id="@+id/imageViewAvatar"
+            android:src="@color/colorPrimary"/>
+
+        <android.support.v7.widget.AppCompatTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textViewAvatar"
+            android:textColor="@android:color/white"
+            android:textSize="32sp"
+            android:layout_gravity="center" />
 
     </FrameLayout>
 
-    <!-- views at the right of the blue line -->
     <LinearLayout
-        android:layout_width="0dp"
-        android:layout_weight="1"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:paddingStart="24dp"
-        android:paddingBottom="32dp"
-        android:clickable="true"
-        android:background="?android:attr/selectableItemBackground"
-        android:focusable="true">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/answerTitle"
-            android:textColor="@color/colorPrimaryText"
-            android:textAppearance="@style/TextAppearance.AppCompat.Title" />
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:gravity="center_vertical">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:singleLine="false"
+            android:textAppearance="@style/TextAppearance.AppCompat.Small"
             android:ellipsize="end"
-            android:textAppearance="@style/TextAppearance.AppCompat.Title"
             android:id="@+id/answerText"/>
 
         <GridView
