--- a/app/src/main/res/layout/fragment_add_answer.xml
+++ b/app/src/main/res/layout/fragment_add_answer.xml
@@ -59,6 +59,7 @@
                         android:contentDescription="@string/app_name"
                         android:src="@drawable/question" />
 
+<!--
                     <android.support.design.widget.TextInputLayout
                         android:id="@+id/inputLayoutTitle"
                         android:layout_width="match_parent"
@@ -82,6 +83,7 @@
                             tools:targetApi="m" />
 
                     </android.support.design.widget.TextInputLayout>
+-->
 
                     <android.support.design.widget.TextInputLayout
                         android:id="@+id/inputLayoutName"
@@ -89,6 +91,8 @@
                         android:layout_height="wrap_content"
                         android:textColorHint="@color/colorSecondaryText"
                         app:counterMaxLength="120"
+                        app:counterEnabled="true"
+                        app:counterTextAppearance="@style/InputTextLayoutCounterStyle"
                         app:errorEnabled="true">
 
                         <android.support.design.widget.TextInputEditText
