--- a/app/src/main/res/layout/fragment_add_trick.xml
+++ b/app/src/main/res/layout/fragment_add_trick.xml
@@ -55,6 +55,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="100dp"
                         android:layout_gravity="center"
+                        android:paddingTop="5dp"
+                        android:paddingBottom="5dp"
                         android:background="@color/colorPrimary"
                         android:contentDescription="@string/app_name"
                         android:src="@drawable/question" />
