Change image preview

--- a/app/src/main/res/layout/item_answer.xml
+++ b/app/src/main/res/layout/item_answer.xml
@@ -114,7 +114,7 @@
 
             <ImageView
                 android:id="@+id/answerRate1"
-                android:layout_width="18dp"
+                android:layout_width="16dp"
                 android:layout_height="18dp"
                 android:paddingTop="3dp"
                 android:contentDescription="@string/app_name"
@@ -122,7 +122,7 @@
 
             <ImageView
                 android:id="@+id/answerRate2"
-                android:layout_width="18dp"
+                android:layout_width="16dp"
                 android:layout_height="18dp"
                 android:paddingTop="3dp"
                 android:contentDescription="@string/app_name"
@@ -130,7 +130,7 @@
 
             <ImageView
                 android:id="@+id/answerRate3"
-                android:layout_width="18dp"
+                android:layout_width="16dp"
                 android:layout_height="18dp"
                 android:paddingTop="3dp"
                 android:contentDescription="@string/app_name"
@@ -138,17 +138,21 @@
 
             <ImageView
                 android:id="@+id/answerRate4"
-                android:layout_width="18dp"
+                android:layout_width="16dp"
                 android:layout_height="18dp"
+                android:paddingLeft="0dp"
+                android:paddingRight="0dp"
                 android:paddingTop="3dp"
                 android:contentDescription="@string/app_name"
                 android:src="@drawable/baseline_star_half_black_24dp" />
 
             <ImageView
                 android:id="@+id/answerRate5"
-                android:layout_width="18dp"
+                android:layout_width="16dp"
                 android:layout_height="18dp"
                 android:paddingTop="3dp"
+                android:paddingLeft="0dp"
+                android:paddingRight="0dp"
                 android:contentDescription="@string/app_name"
                 android:src="@drawable/baseline_star_border_black_24dp" />
 
